--- a/XBatteryStatus/App.config
+++ b/XBatteryStatus/App.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="XBatteryStatus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="BatteryStatus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <XBatteryStatus.Properties.Settings>
+        <BatteryStatus.Properties.Settings>
             <setting name="updateVersion" serializeAs="String">
                 <value />
             </setting>
@@ -19,6 +19,6 @@
             <setting name="hide" serializeAs="String">
                 <value>False</value>
             </setting>
-        </XBatteryStatus.Properties.Settings>
+        </BatteryStatus.Properties.Settings>
     </userSettings>
 </configuration>
